Fix lack of wrapping tablist for snapshot before/after

--- a/packages/trace-viewer/src/ui/snapshotTab.css
+++ b/packages/trace-viewer/src/ui/snapshotTab.css
@@ -14,6 +14,11 @@
   limitations under the License.
 */
 
+.snapshot-tabs {
+  display: flex;
+  height: 100%;
+}
+
 .snapshot-tab {
   align-items: stretch;
   outline: none;
